--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "with-socket.io",
   "version": "1.0.0",
   "dependencies": {
+    "chai": "^4.1.2",
     "express": "^4.15.2",
     "isomorphic-fetch": "^2.2.1",
+    "mocha": "^4.0.1",
     "next": "latest",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -14,8 +16,14 @@
     "uuid": "^3.1.0"
   },
   "scripts": {
+    "test": "mocha --compilers js:babel-core/register ./tests/*.spec.js",
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
